# raindrop

./: .clang-format  .clang-tidy  .codespellrc  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  LICENSE.MD  README.MD  build.sh  makefile  vcpkg.json
docs/: Engine.MD  (+1 more)
modules/: CMakeLists.txt  CMakeListstest.txt
modules/Asset/: CMakeLists.txt  module.json.in
modules/Asset/src/: AssetModule.cpp
modules/CycleManager/: CMakeLists.txt
modules/Event/: CMakeLists.txt
modules/Event/src/: EventModule.cpp
modules/Events/: CMakeLists.txt
modules/Filesystem/: CMakeLists.txt
modules/Filesystem/src/: FilesystemModule.cpp  MountTable.cpp
modules/ImGui/: CMakeLists.txt
modules/ImGui/src/: ImGuiContext.cpp  ImGuiModule.cpp
modules/Layers/: CMakeLists.txt
modules/Layers/src/: Layer.cpp  LayerManager.cpp  LayerModule.cpp
modules/RenderCore/: CMakeLists.txt
modules/RenderCore/src/: DeviceManager.cpp  RenderCommandContext.cpp  RenderCoreModule.cpp
modules/RenderOutput/: CMakeLists.txt
modules/RenderOutput/src/: BufferRenderOutput.cpp  IRenderOutput.cpp  RenderOutputEndRenderPass.cpp  RenderOutputModule.cpp  WindowRenderOutput.cpp
modules/ResourceRegistry/: CMakeLists.txt
modules/ResourceRegistry/src/: Registry.cpp
modules/Scene/: CMakeLists.txt
modules/Scene/src/: Entity.cpp  IBehavior.cpp  PhaseExecutionStage.cpp  Scene.cpp  SceneModule.cpp
modules/Scheduler/: CMakeLists.txt
modules/Scheduler/src/: Scheduler.cpp  StageInitHelper.cpp
modules/Shader/: CMakeLists.txt
modules/Shader/src/: GLSLShader.cpp  Shader.cpp  ShaderFactory.cpp
modules/TaskManager/: CMakeLists.txt
modules/Test/: CMakeLists.txt
modules/Test/include/: test.hpp
modules/Test/src/: test.cpp
modules/Window/: CMakeLists.txt
modules/Window/src/: Display.cpp  Window.cpp  WindowConfig.cpp  WindowEventStage.cpp  WindowModule.cpp
raindrop/: .codespellrc  CMakeLists.txt  README.MD
raindrop/cmake/: dev-mode.cmake  docs.cmake
raindrop/include/Raindrop/: Engine.hpp  Operator.hpp  Raindrop.hpp  Version.hpp
raindrop/source/: Engine.cpp
raindrop/source/Modules/: Errors.cpp  Manager.cpp
raindrop/source/Scheduler/: Scheduler.cpp
raindrop/source/Tasks/: TaskManager.cpp
raindrop/src/: Engine.cpp  Version.cpp
raindrop/src/Modules/: Errors.cpp  Manager.cpp
raindrop/src/Scheduler/: Scheduler.cpp  StageInitHelper.cpp
raindrop/src/Tasks/: TaskHandle.cpp
raindrop/testbed/: CMakeLists.txt
raindrop/testbed/src/: Editor.hpp  main.cpp
sim/: CMakeLists.txt
sim/resources/shaders/: planet.frag.glsl  planet.vert.glsl
sim/source/: CameraUpdateBehavior.hpp  Content.hpp  Editor.hpp  Planet.cpp  Planet.hpp  main.cpp
sim/source/Editor/: ComponentInfo.hpp  Editor.cpp  Editor.hpp  ImGuiHelper.cpp  ImGuiHelper.hpp  RenderStage.cpp  RenderStage.hpp
sim/source/planet/: PlanetComponent.hpp  PlanetComponnet.cpp  PlanetRenderBehavior.cpp  PlanetRenderBehavior.hpp  PlanetServiceBehavior.cpp  PlanetServiceBehavior.hpp  PlanetUpdateBehavior.cpp  PlanetUpdateBehavior.hpp
sim/test_source/: main.cpp
src/: Application.cpp  CMakeLists.txt  Engine.cpp  Raindrop.cpp  Raindrop.hpp
src/Asset/: Manager.cpp
src/Builtin/Behaviors/: HierarchyAttacherBehavior.cpp  HierarchyTransformPropagator.cpp  TagAttacherBehavior.cpp  TransformAttacherBehavior.cpp
src/Core/: Engine.cpp  String.cpp  String.hpp  common.hpp  core.hpp  module.hpp
src/Core/Asset/: AssetManager.cpp
src/Core/Debug/: debug.hpp  logger.cpp  logger.hpp  profiler.cpp  profiler.hpp
src/Core/Event/: EventManager.cpp
src/Core/Filesystem/: DirectoryView.cpp  DirectoryView.hpp  File.cpp  File.hpp  Filebuffer.cpp  Filebuffer.hpp  Filestream.cpp  Filestream.hpp  Filesystem.cpp  Filesystem.hpp  Folder.cpp  Folder.hpp
src/Core/IO/: CSVReader.cpp  CSVReader.hpp  DLLReader.cpp  DLLReader.hpp  Module.cpp  Module.hpp
src/Core/Logging/: LoggingManager.cpp
src/Core/Maths/: Maths.cpp  Maths.hpp  common.hpp  exponential.hpp  fwd.hpp  geometric.hpp  glm.hpp  integer.hpp  matrix.hpp  packing.hpp  trigonometric.hpp  vector_relational.hpp
src/Core/Memory/: memory.cpp  memory.hpp
src/Core/Registry/: Registry.cpp  RegistryManager.cpp
src/Engine/: Raindrop.hpp
src/Event/: EventSystem.cpp  Manager.cpp
src/Graphics/: Buffer.cpp  Config.cpp  Context.cpp  Context.hpp  DescriptorPool.cpp  DescriptorSetLayout.cpp  Device.cpp  Engine.cpp  GUI.cpp  GraphicsCommandPool.cpp  GraphicsContext.cpp  GraphicsEngine.cpp  GraphicsPipeline.cpp  GraphicsPlugin.cpp  GraphicsPlugin.hpp  ImGUI.cpp  Instance.cpp  Model.cpp  PhysicalDevice.cpp  PhysicalDeviceManager.cpp  RenderSystem.cpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Swapchain.cpp  TransfertCommandPool.cpp  Window.cpp  Window.hpp  WorldFramebuffer.cpp  stringToVulkan.cpp
src/Input/: Manager.cpp  Storage.cpp
src/Layer/: Layer.cpp  Manager.cpp
src/Managers/: AssetManager.cpp  SceneManager.cpp
src/Runtime/: Engine.cpp  Layer.cpp  LayerRegistry.cpp
src/Scene/: Entity.cpp  IBehavior.cpp  LayerBehavior.cpp  Manager.cpp  Scene.cpp  SceneSystem.cpp
src/System/: ISystem.cpp  Manager.cpp
src/Tools/: comparator.cpp  comparator.hpp  hash.cpp  hash.hpp
src/Window/: Config.cpp  Display.cpp  Manager.cpp  Window.cpp  WindowConfig.cpp  WindowSystem.cpp
src/Wrappers/: EntityWrapper.cpp  ModuleWrapper.cpp  SceneWrapper.cpp
src/debug/: Instrumentor.cpp  Logger.cpp
src/events/: EventMediator.cpp  defaultEvents.cpp
src/layers/: LayerStack.cpp
src/memory/: ChunkAllocator.cpp  DynamicArray.cpp  ForwardLinkedList.cpp  MemoryPool.cpp  Stack.cpp  memory.cpp
src/render/: Context.cpp  Renderer.cpp
src/window/: SDL2_Window.cpp  Window.cpp
test/: CMakeLists.txt
test/SDL2_API/: test.cpp
test/UnitTests/: CMakeLists.txt
test/chunkAllocator/: test.cpp
test/chunkedArray/: test.cpp
test/defaultEvents/: test.cpp
test/dynamicArray/: compile.bat  test.cpp
test/eventMediator/: test.cpp
test/forwardLinkedList/: test.cpp
test/layers/: test.cpp
test/log/: test.cpp
test/memoryPool/: compile.bat  test.cpp
test/renderer/: test.cpp
test/stack/: test.cpp
(+1497 files in other folders)
