
add_subdirectory(Audio)
add_subdirectory(Config)
add_subdirectory(Core)
add_subdirectory(ECS)
add_subdirectory(Event)
add_subdirectory(Graphics)
add_subdirectory(Input)
add_subdirectory(Layer)
add_subdirectory(Network)
add_subdirectory(Physics)
add_subdirectory(Scene)
add_subdirectory(Window)

# ---- End-of-file commands ----


add_folders(UnitTest)